<resources>
    <string name="app_name">tipCalc</string>
    <string name="tip_calculator_heading">Tip Calculator</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="good_20">Good (20%)</string>
    <string name="average_10">Average(10%)</string>
    <string name="sample_hiny">How was the service</string>
    <string name="bad_5">Bad(5%)</string>
    <string name="ceil">Ceil decimal</string>
    <string name="result">Total Tip</string>
    <string name="calcBtn">Calculate</string>
    <string name="total">Cost Of Service</string>
</resources>