<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CalcBtn"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="128dp"
        android:layout_marginBottom="684dp"
        android:text="@string/tip_calculator"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/total"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="599dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/total"

        android:inputType="numberDecimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/heading"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck,TextContrastCheck" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="276dp"
        android:layout_height="207dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="310dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total">

        <RadioButton
            android:id="@+id/goodRadio"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:text="@string/good_20" />

        <RadioButton
            android:id="@+id/averageRadio"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/average_10" />

        <RadioButton
            android:id="@+id/badRadio"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/bad_5" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="95dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sample_hiny"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/isCeil"
        android:layout_width="338dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="263dp"
        android:text="@string/ceil"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/calcBtn"
        android:layout_width="153dp"
        android:layout_height="71dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="135dp"
        android:text="@string/calcBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/result"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/isCeil"
        app:layout_constraintVertical_bias="0.473" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="150dp"
        android:text="@string/result"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/calcBtn"
        app:layout_constraintTop_toBottomOf="@+id/isCeil"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>